# temperature-controller-cpp

./: CMakeLists.txt  README.md  config.txt  main.cpp
include/: ConfigReader.h  ITemperatureController.h  ITemperatureCooler.h  ITemperatureHeater.h  SystemState.h  TemperatureController.h  TemperatureCooler.h  TemperatureHeater.h  TemperatureValueProvider.h
src/: Config.h  ConfigReader.cpp  IConfigReader.h  ITemperatureController.h  ITemperatureSensor.h  TemperatureController.cpp  TemperatureController.h  TemperatureCooler.cpp  TemperatureHeater.cpp  TemperatureSensor.cpp  TemperatureSensor.h  TemperatureValueProvider.cpp
test/: ConfigReaderMock.h  ConfigReaderTest.cpp  TemperatureControllerTest.cpp  TemperatureCoolerTest.cpp  TemperatureHeaterTest.cpp  TemperatureSensorMock.h  TemperatureSensorTest.cpp
test/config/: correct_data.txt
test/mocks/: ConfigReaderMock.h  TemperatureCoolerMock.h  TemperatureHeaterMock.h  TemperatureSensorMock.h
